# django-celus-registry

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  makemigrations.py  pyproject.toml
django_celus_registry/: tasks.py
src/django_celus_registry/management/commands/: download_registry.py
tests/: settings.py  test_download_registry.py
