[project]
name = "django-celus-registry"
version = "0.4.1"
description = "A simple scaper which download plublic data from the registry of COUNTER project"
authors = [{ name = "Stepan Henek", email = "stepan@bigdigdata.com" }]
requires-python = ">=3.8"
readme = "README.md"
license = "MIT"
keywords = [
    "ntfy",
    "email backend",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Django",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "celery>=5.4.0",
    "django>=4.2.6",
    "requests>=2.31.0",
    "djangorestframework>=3.14.0",
]

[project.urls]
Repository = "https://github.com/Big-Dig-Data/django-celus-registry"

[dependency-groups]
dev = [
    "pre-commit>=3.5.0,<4",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "ruff>=0.15.16,<0.16",
]

[tool.uv]
default-groups = "all"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]

[build-system]
requires = ["uv_build>=0.9.26,<0.12.0"]
build-backend = "uv_build"

[tool.ruff.lint]
ignore = [
    "A001", # Variable `Warning` is shadowing a Python builtin
    "A002", # Argument `id` is shadowing a Python builtin
    "A003", # Class attribute `list` is shadowing a Python builtin
    "DJ008",  # model does not have __str__ method
    "F811", # redefinition of unused '...'
]
select = [
    'A',  # flake8-builtins
    'B',  # flake8-bugbear
    'DJ', # flake8-django
    'E',  # pycodestyle - errors
    'F',  # pyflakes
    'I',  # isort
    'W',  # pycodestyle - warnings
]
fixable = ['I001']  # isort: imports are incorrectly sorted

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["B011"]  # test files should have asserts

[tool.ruff.lint.isort]
split-on-trailing-comma = false
known-first-party = ["django_celus_registry"]

[tool.ruff.format]
skip-magic-trailing-comma = true
